# libpressio_tutorial

./: README.md
exercises/10_sz3_examples/: CMakeLists.txt  README.md  sz3demo.cpp
exercises/10_sz3_examples/Decomposition/: SZBioMDDecomposition.hpp  TruncationDecomposition.hpp
exercises/2_comparing_compressors/: README.md  rate_distortion.py  visualize.py
exercises/2_comparing_compressors/cxx/: CMakeLists.txt  comparing_compressors.cc
exercises/2_comparing_compressors/python/: comparing_compressors.py
exercises/3_external_metrics/: README.md
exercises/3_external_metrics/c/: external_metric.c
exercises/3_external_metrics/cxx/: CMakeLists.txt  external_metric.cc  run_external.cc
exercises/3_external_metrics/python/: external_metric.py
exercises/4_libpressio_opt/c/: opt_zfp_perf.c
exercises/4_libpressio_opt/cxx/: CMakeLists.txt  opt_zfp_perf.cc
exercises/4_libpressio_opt/python/: opt_zfp_perf.py
exercises/5_writing_basic_compressors/: CMakeLists.txt  Makefile  pressio_runlength_solution.cc
exercises/6_writing_meta_compressors/: CMakeLists.txt  Makefile  pressio_typeswitch_solution.cc
exercises/7_gpu_compressors/c/: zfp_gpu.c
exercises/7_gpu_compressors/cxx/: CMakeLists.txt  zfp_gpu.cc
exercises/7_gpu_compressors/python/: zfp_gpu.py
exercises/8_fzcompiler/python/: best_compressor.py  custom_compressor.py
